--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -9,3 +9,77 @@
 .test {
     color: red !important;
 }
+
+p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #1F3F68;
+
+}
+
+h1 {
+    font-size: 64px;
+    color: #1F3F68;
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 44px;
+    text-align: center;
+}
+
+h3 {
+    font-size: 36px;
+    text-align: center;
+}
+
+h4 {
+    font-size: 20px;
+    line-height: 30px;
+    color: #1F3F68;
+}
+
+input, textarea {
+    border: 1px solid #356EAD;
+    box-sizing: border-box;
+    border-radius: 100px;
+    opacity: 0.4;
+}
+
+form input {
+    background: #5A98D0;
+    box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    color: #FFFFFF;
+    text-transform: uppercase;
+}
+
+form {
+    background: url(/static/form-background.jpg);
+    background-repeat: no-repeat;
+}
+
+input[type=submit] {
+    background: linear-gradient(135deg, rgb(74,117,229) 0%,rgb(141,85,233) 99%);
+    opacity: 1;
+}
+
+ul.breadcrumb {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to top, teal, white);
+    border-radius: 0 20px 20px 0;
+}
+
+ul.breadcrumb li {
+    display: inline-block;
+    padding: 10px 20px;
+    border-right: 2px solid white;
+    border-radius: 0 20px 20px 0;
+    box-shadow: 4px 0 2px -2px black;
+}
